# engineering_practices_ml

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  main.py  mkdocs.yml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config  config.local.example
.github/workflows/: ci.yml  docs.yml
config/: train_params.yaml
data/raw/: INFO_WINE_QT.md
docs/: DEPLOYMENT.md  GIT_WORKFLOW.md  QUICKSTART.md  VENV_GUIDE.md  index.md
docs/api/: clearml_tracker.md  config_models.md  experiment_tracker.md
docs/homework_1/: CHECKLIST.md  REPORT.md
docs/homework_2/: MINIO_SETUP.md  REPORT.md  REPRODUCIBILITY.md
docs/homework_3/: REPORT.md
docs/homework_4/: REPORT.md
docs/homework_5/: REPORT.md
docs/homework_5/screenshots/: README.md
docs/homework_6/: REPORT.md
docs/reports/: README.md
docs/reports/experiments/: README.md  latest.md
examples/: example_experiment.py
scripts/: evaluate_model.py  prepare_data.py  track_data.sh  train_model.py
scripts/clearml/: compare_experiments.py  create_task_templates.py  init_clearml.py  manage_models.py  ml_pipeline.py  setup_clearml.sh  train_with_clearml.py
scripts/data/: prepare_data.py  track_data.sh  track_model.sh  validate_data.py
scripts/experiments/: compare_experiments.py  generate_experiments.py  run_all_experiments.py  run_experiment.py
scripts/models/: evaluate_model.py  train_model.py
scripts/pipeline/: run_pipeline.py  run_with_params.py
scripts/reports/: __init__.py  generate_experiment_report.py
scripts/setup/: activate_venv.sh  create_venv.sh  setup.sh  setup_dvc.sh  setup_experiments.sh  setup_minio.sh
src/: __init__.py
src/data_science_project/: __init__.py  clearml_tracker.py  config_models.py  dvc_utils.py  experiment_tracker.py  pipeline_monitor.py
tests/unit/: test_main.py
